# fastapi-app-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .drone.yml  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
{{cookiecutter.project_slug}}/app/: api.py  config.py  logger.py  main.py  utils.py
{{cookiecutter.project_slug}}/app/alembic/: env.py
{{cookiecutter.project_slug}}/app/api/: __init__.py
{{cookiecutter.project_slug}}/app/api/endpoints/: sample.py
{{cookiecutter.project_slug}}/app/database/: __init__.py  base_class.py
{{cookiecutter.project_slug}}/app/repository/: __init__.py
{{cookiecutter.project_slug}}/docker/: entrypoint.sh
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/unit/services/: __init__.py  test_sample.py
