[tool.poetry]
name = "aiwill-imp-operation"
version = "0.1.0"
description = ""
authors = ["Bobson Lin <bobson801104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
loguru = "^0.5.1"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
