[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} {{ cookiecutter.email }}"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
loguru = "^0.5.1"
alembic = "^1.4.2"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
pytest = "^6.0.1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
